--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 title: BY Blog
 SEOTitle: 柏荧的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
+email: joehsupi0602@gmail.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+keyword: "Spider-Man,17BOY Blog, 周树皮的博客, kysonzhou, iOS, Apple, iPhone"
+url: "http://zhoukexin-62.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
 
