--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: 17BOY Blog
-SEOTitle: 柏荧的博客 | BY Blog
+SEOTitle: 周树皮的博客 | 17BOY Blog
 header-img: img/post-bg-desk.jpg
 email: joehsupi0602@gmail.com
-description: "Every failure is leading towards success."
+description: "Well,it's a first time for every things right?"
 keyword: "Spider-Man,17BOY Blog, 周树皮的博客, kysonzhou, iOS, Apple, iPhone"
-url: "http://zhoukexin-62.github.io"          # your host, for absolute URL
+url: "https://zhoukexin-62.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/zhoukexin-62/zhoukexin-62.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
