--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 17BOY Blog
 SEOTitle: 周树皮的博客 | 17BOY Blog
 header-img: img/post-bg-desk.jpg
 email: joehsupi0602@gmail.com
-description: "Well,it's a first time for every things right?"
+description: ""
 keyword: "Spider-Man,17BOY Blog, 周树皮的博客, kysonzhou, iOS, Apple, iPhone"
 url: "https://zhoukexin-62.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -11,7 +11,7 @@ github_repo: "https://github.com/zhoukexin-62/zhoukexin-62.github.io.git" # you 
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "Well,it's a first time for every things right?"
 sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
