--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 17BOY Blog
 SEOTitle: 周树皮的博客 | 17BOY Blog
 header-img: img/post-bg-desk.jpg
 email: joehsupi0602@gmail.com
-description: ""
+description: "夜静海涛三万里，月明飞锡下天风"
 keyword: "Spider-Man,17BOY Blog, 周树皮的博客, kysonzhou, iOS, Apple, iPhone"
 url: "https://zhoukexin-62.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
