--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 17BOY Blog
 SEOTitle: 周树皮的博客 | 17BOY Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/spider_man_bg.png
 email: joehsupi0602@gmail.com
 description: "夜静海涛三万里，月明飞锡下天风"
 keyword: "Spider-Man,17BOY Blog, 周树皮的博客, kysonzhou, iOS, Apple, iPhone"
@@ -12,7 +12,7 @@ github_repo: "https://github.com/zhoukexin-62/zhoukexin-62.github.io.git" # you 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Well,it's a first time for every things right?"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/spider_man_avatar.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
