--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/zhoukexin-62/zhoukexin-62.github.io.git" # you 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Well,it's a first time for every things right?"
-sidebar-avatar: /img/spider_man_avatar.png      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/my_avatar.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
